- Fixed: sending email as text only did not work
- Fixed: Javascript sorting of images did not work
- Fixed: No products and no breadcrumb show up if filtered page does not have a product (Ticket #115)
- Fixed multiple URL problems in address book module
- Fixed multiple URL and template problems in shopping cart module
- Fixed bug in runonce.php, must not use TRUNCATE to empty cart table

Version 0.1.2 (2010-06-20)
------------------------------
- Fixed: Backend variant listing showed unassigned attributes (Ticket #135)
- Fixed problem with payment modules accepting only two digit floating point precision (Ticket #136)
- Fixed wrong grand total price in cart module (Ticket #137)
- Fixed variant price in cart not correct
- Fixed a possible bug with attributes not available in the template
- Moved product tax class field to pricing legend (Ticket #134)
- Now using domready event to submit payment checkout forms (Ticket #145)
- Fixed multiple label issues (Ticket #78, Ticket #148, Ticket #150)

Version 0.1.1 (2010-06-06)
------------------------------
- Customer email is now sent to member email if no email in address book
- Fixed: Countries and shipping methods for payment modules are no longer mandatory
- Fixed: Subdivisions for shipping modules should now work correctly
- Fixed: Tax was not applied to flat price shipping
- Fixed: Final price for paypal standard payment module did not include taxes
- Fixed: Latest order did not appear in order history module
- Fixed: Checkout condition form did show invisible fields
- Fixed: Bug with minimum/maximum order total calculation.
- Fixed: missing price calculation function in Order Total shipping (Ticket #112)
- Fixed old image size message (Ticket #119)
- Fixed wrong template name for config switcher module
- Fixed product alias not generated correctly when alias field is before name (Ticket #123)
- Fixed template bug in iso_cart_full (Ticket #129)
- Fixed problem with checkout in Internet Explorer 6 (Ticket #128)
